--- a/pages/tableData/datapages/sjtj/jsjdb/jsjdb.wxss
+++ b/pages/tableData/datapages/sjtj/jsjdb/jsjdb.wxss
@@ -3,27 +3,36 @@
   border: 0px solid darkgray;
 }
 .tr {
+  border: 1px solid gray;
   display: flex;
   width: 100%;
   justify-content: center;
   height: 3rem;
   align-items: center;
 }
-.td {
+/* .td {
     width:40%;
     justify-content: center;
     text-align: center;
+} */
+.td {
+  border: 1px solid gray;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  height: 3rem;
+  align-items: center;
 }
 .bg-w{
   background: snow;
 }
 .bg-g{
-  background: #E6F3F9;
+  background: #f0f0f0;
 }
 .th {
   width: 100%;
   justify-content: center;
-  background: #f0f0f0;
+  background: #cccccc;
   /* color: #fff; */
   display: flex;
   height: 3rem;
